Remove redundant parts of Travis custom script for EA builds.